# cppExercises

productsum/: CMakeLists.txt  README.txt
productsum/ext/gtest/: CMakeLists.txt
productsum/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
productsum/lib/productsum/: CMakeLists.txt  Makefile  cmake_install.cmake  productsum.cpp  productsum.h
productsum/lib/timing/: CMakeLists.txt  Makefile  cmake_install.cmake  timing.cpp  timing.h
productsum/src/: CMakeLists.txt  Makefile  cli.cpp  cmake_install.cmake
productsum/test/: CMakeLists.txt  test_main.cpp
productsum/test/test_productsum/: test_productsum.cpp
productsum/test/test_timing/: test_timing.cpp
